tinyml/tests/snapshots/corpus_tests__c0009_naming_invariants__lex.snap
---
source: target/debug/build/tinyml-3635f5e80bf3d5dc/out/corpus_tests_generated.rs
expression: "lex_snapshot(\"tests/fixtures/0009_naming_invariants.ml\")"
---
[
    Token {
        kind: Use,
        span: Span {
            start: 0,
            end: 3,
        },
    },
    Token {
        kind: Ident(
            "App",
        ),
        span: Span {
            start: 4,
            end: 7,
        },
    },
    Token {
        kind: Dot,
        span: Span {
            start: 7,
            end: 8,
        },
    },
    Token {
        kind: Ident(
            "Core",
        ),
        span: Span {
            start: 8,
            end: 12,
        },
    },
    Token {
        kind: Dot,
        span: Span {
            start: 12,
            end: 13,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: Ident(
            "make_user",
        ),
        span: Span {
            start: 14,
            end: 23,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 23,
            end: 24,
        },
    },
    Token {
        kind: Ident(
            "User",
        ),
        span: Span {
            start: 25,
            end: 29,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 29,
            end: 30,
        },
    },
    Token {
        kind: Use,
        span: Span {
            start: 31,
            end: 34,
        },
    },
    Token {
        kind: Ident(
            "App",
        ),
        span: Span {
            start: 35,
            end: 38,
        },
    },
    Token {
        kind: Dot,
        span: Span {
            start: 38,
            end: 39,
        },
    },
    Token {
        kind: Ident(
            "Core",
        ),
        span: Span {
            start: 39,
            end: 43,
        },
    },
    Token {
        kind: Dot,
        span: Span {
            start: 43,
            end: 44,
        },
    },
    Token {
        kind: Star,
        span: Span {
            start: 44,
            end: 45,
        },
    },
    Token {
        kind: Type,
        span: Span {
            start: 47,
            end: 51,
        },
    },
    Token {
        kind: Ident(
            "Maybe",
        ),
        span: Span {
            start: 52,
            end: 57,
        },
    },
    Token {
        kind: LAngle,
        span: Span {
            start: 57,
            end: 58,
        },
    },
    Token {
        kind: TypeVar(
            "a",
        ),
        span: Span {
            start: 58,
            end: 60,
        },
    },
    Token {
        kind: RAngle,
        span: Span {
            start: 60,
            end: 61,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: 62,
            end: 63,
        },
    },
    Token {
        kind: Pipe,
        span: Span {
            start: 66,
            end: 67,
        },
    },
    Token {
        kind: Ident(
            "None",
        ),
        span: Span {
            start: 68,
            end: 72,
        },
    },
    Token {
        kind: Pipe,
        span: Span {
            start: 75,
            end: 76,
        },
    },
    Token {
        kind: Ident(
            "Some",
        ),
        span: Span {
            start: 77,
            end: 81,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 81,
            end: 82,
        },
    },
    Token {
        kind: TypeVar(
            "a",
        ),
        span: Span {
            start: 82,
            end: 84,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 84,
            end: 85,
        },
    },
    Token {
        kind: Type,
        span: Span {
            start: 87,
            end: 91,
        },
    },
    Token {
        kind: Ident(
            "User",
        ),
        span: Span {
            start: 92,
            end: 96,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: 97,
            end: 98,
        },
    },
    Token {
        kind: Ident(
            "User",
        ),
        span: Span {
            start: 99,
            end: 103,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 104,
            end: 105,
        },
    },
    Token {
        kind: Ident(
            "name",
        ),
        span: Span {
            start: 106,
            end: 110,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 110,
            end: 111,
        },
    },
    Token {
        kind: Ident(
            "string",
        ),
        span: Span {
            start: 112,
            end: 118,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 118,
            end: 119,
        },
    },
    Token {
        kind: Ident(
            "_id",
        ),
        span: Span {
            start: 120,
            end: 123,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 123,
            end: 124,
        },
    },
    Token {
        kind: Ident(
            "u32",
        ),
        span: Span {
            start: 125,
            end: 128,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 128,
            end: 129,
        },
    },
    Token {
        kind: Ident(
            "active",
        ),
        span: Span {
            start: 130,
            end: 136,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 136,
            end: 137,
        },
    },
    Token {
        kind: Ident(
            "bool",
        ),
        span: Span {
            start: 138,
            end: 142,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 143,
            end: 144,
        },
    },
    Token {
        kind: Let,
        span: Span {
            start: 146,
            end: 149,
        },
    },
    Token {
        kind: Ident(
            "_value",
        ),
        span: Span {
            start: 150,
            end: 156,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: 157,
            end: 158,
        },
    },
    Token {
        kind: Int(
            "1",
        ),
        span: Span {
            start: 159,
            end: 160,
        },
    },
    Token {
        kind: Let,
        span: Span {
            start: 162,
            end: 165,
        },
    },
    Token {
        kind: Ident(
            "make_user",
        ),
        span: Span {
            start: 166,
            end: 175,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 176,
            end: 177,
        },
    },
    Token {
        kind: Ident(
            "name",
        ),
        span: Span {
            start: 177,
            end: 181,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 181,
            end: 182,
        },
    },
    Token {
        kind: Ident(
            "string",
        ),
        span: Span {
            start: 183,
            end: 189,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 189,
            end: 190,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: 191,
            end: 192,
        },
    },
    Token {
        kind: Ident(
            "User",
        ),
        span: Span {
            start: 193,
            end: 197,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 198,
            end: 199,
        },
    },
    Token {
        kind: Ident(
            "name",
        ),
        span: Span {
            start: 200,
            end: 204,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 204,
            end: 205,
        },
    },
    Token {
        kind: Ident(
            "name",
        ),
        span: Span {
            start: 206,
            end: 210,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 210,
            end: 211,
        },
    },
    Token {
        kind: Ident(
            "_id",
        ),
        span: Span {
            start: 212,
            end: 215,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 215,
            end: 216,
        },
    },
    Token {
        kind: Int(
            "1",
        ),
        span: Span {
            start: 217,
            end: 218,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            start: 218,
            end: 219,
        },
    },
    Token {
        kind: Ident(
            "active",
        ),
        span: Span {
            start: 220,
            end: 226,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 226,
            end: 227,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 228,
            end: 232,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 233,
            end: 234,
        },
    },
    Token {
        kind: Let,
        span: Span {
            start: 236,
            end: 239,
        },
    },
    Token {
        kind: Ident(
            "read_id",
        ),
        span: Span {
            start: 240,
            end: 247,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 248,
            end: 249,
        },
    },
    Token {
        kind: Ident(
            "User",
        ),
        span: Span {
            start: 249,
            end: 253,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 254,
            end: 255,
        },
    },
    Token {
        kind: Ident(
            "_id",
        ),
        span: Span {
            start: 256,
            end: 259,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 260,
            end: 261,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 261,
            end: 262,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            start: 263,
            end: 264,
        },
    },
    Token {
        kind: Ident(
            "_id",
        ),
        span: Span {
            start: 265,
            end: 268,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            start: 269,
            end: 269,
        },
    },
]
