tinyml/tests/snapshots/corpus_tests__c0009_naming_invariants__parse.snap
---
source: target/debug/build/tinyml-3635f5e80bf3d5dc/out/corpus_tests_generated.rs
expression: "parse_snapshot(\"tests/fixtures/0009_naming_invariants.ml\")"
---
Module {
    items: [
        UseDecl(
            Concrete {
                module: Qualified {
                    name: "App",
                    rest: Name {
                        name: "Core",
                        span: Span {
                            start: 8,
                            end: 12,
                        },
                    },
                    span: Span {
                        start: 4,
                        end: 12,
                    },
                },
                members: [
                    Name {
                        name: "make_user",
                        span: Span {
                            start: 14,
                            end: 23,
                        },
                    },
                    Name {
                        name: "User",
                        span: Span {
                            start: 25,
                            end: 29,
                        },
                    },
                ],
                span: Span {
                    start: 0,
                    end: 30,
                },
            },
        ),
        UseDecl(
            Wildcard {
                module: Qualified {
                    name: "App",
                    rest: Name {
                        name: "Core",
                        span: Span {
                            start: 39,
                            end: 43,
                        },
                    },
                    span: Span {
                        start: 35,
                        end: 43,
                    },
                },
                span: Span {
                    start: 31,
                    end: 45,
                },
            },
        ),
        TypeDecl(
            TypeDecl {
                name: Name {
                    name: "Maybe",
                    span: Span {
                        start: 52,
                        end: 57,
                    },
                },
                params: [
                    TypeVar {
                        name: "a",
                        span: Span {
                            start: 58,
                            end: 60,
                        },
                    },
                ],
                body: Variant {
                    variants: [
                        TupleConstructor {
                            ident: Name {
                                name: "None",
                                span: Span {
                                    start: 68,
                                    end: 72,
                                },
                            },
                            args: [],
                            span: Span {
                                start: 68,
                                end: 72,
                            },
                        },
                        TupleConstructor {
                            ident: Name {
                                name: "Some",
                                span: Span {
                                    start: 77,
                                    end: 81,
                                },
                            },
                            args: [
                                Var {
                                    var: TypeVar {
                                        name: "a",
                                        span: Span {
                                            start: 82,
                                            end: 84,
                                        },
                                    },
                                    span: Span {
                                        start: 82,
                                        end: 84,
                                    },
                                },
                            ],
                            span: Span {
                                start: 77,
                                end: 85,
                            },
                        },
                    ],
                    span: Span {
                        start: 68,
                        end: 85,
                    },
                },
                span: Span {
                    start: 47,
                    end: 85,
                },
            },
        ),
        TypeDecl(
            TypeDecl {
                name: Name {
                    name: "User",
                    span: Span {
                        start: 92,
                        end: 96,
                    },
                },
                params: [],
                body: Variant {
                    variants: [
                        RecordConstructor {
                            ident: Name {
                                name: "User",
                                span: Span {
                                    start: 99,
                                    end: 103,
                                },
                            },
                            fields: [
                                (
                                    Name {
                                        name: "name",
                                        span: Span {
                                            start: 106,
                                            end: 110,
                                        },
                                    },
                                    App {
                                        name: Name {
                                            name: "string",
                                            span: Span {
                                                start: 112,
                                                end: 118,
                                            },
                                        },
                                        args: [],
                                        span: Span {
                                            start: 112,
                                            end: 118,
                                        },
                                    },
                                ),
                                (
                                    Name {
                                        name: "_id",
                                        span: Span {
                                            start: 120,
                                            end: 123,
                                        },
                                    },
                                    App {
                                        name: Name {
                                            name: "u32",
                                            span: Span {
                                                start: 125,
                                                end: 128,
                                            },
                                        },
                                        args: [],
                                        span: Span {
                                            start: 125,
                                            end: 128,
                                        },
                                    },
                                ),
                                (
                                    Name {
                                        name: "active",
                                        span: Span {
                                            start: 130,
                                            end: 136,
                                        },
                                    },
                                    App {
                                        name: Name {
                                            name: "bool",
                                            span: Span {
                                                start: 138,
                                                end: 142,
                                            },
                                        },
                                        args: [],
                                        span: Span {
                                            start: 138,
                                            end: 142,
                                        },
                                    },
                                ),
                            ],
                            span: Span {
                                start: 99,
                                end: 144,
                            },
                        },
                    ],
                    span: Span {
                        start: 99,
                        end: 144,
                    },
                },
                span: Span {
                    start: 87,
                    end: 144,
                },
            },
        ),
        LetDecl(
            Const {
                name: Name {
                    name: "_value",
                    span: Span {
                        start: 150,
                        end: 156,
                    },
                },
                body: Literal {
                    value: Int(
                        "1",
                    ),
                    span: Span {
                        start: 159,
                        end: 160,
                    },
                },
                span: Span {
                    start: 146,
                    end: 160,
                },
            },
        ),
        LetDecl(
            Fn {
                name: Name {
                    name: "make_user",
                    span: Span {
                        start: 166,
                        end: 175,
                    },
                },
                args: [
                    TypeHint {
                        pattern: Var {
                            name: Name {
                                name: "name",
                                span: Span {
                                    start: 177,
                                    end: 181,
                                },
                            },
                            span: Span {
                                start: 177,
                                end: 181,
                            },
                        },
                        hint: App {
                            name: Name {
                                name: "string",
                                span: Span {
                                    start: 183,
                                    end: 189,
                                },
                            },
                            args: [],
                            span: Span {
                                start: 183,
                                end: 189,
                            },
                        },
                        span: Span {
                            start: 176,
                            end: 190,
                        },
                    },
                ],
                body: Record {
                    name: Name {
                        name: "User",
                        span: Span {
                            start: 193,
                            end: 197,
                        },
                    },
                    fields: [
                        (
                            Name {
                                name: "name",
                                span: Span {
                                    start: 200,
                                    end: 204,
                                },
                            },
                            Var {
                                name: Name {
                                    name: "name",
                                    span: Span {
                                        start: 206,
                                        end: 210,
                                    },
                                },
                                span: Span {
                                    start: 206,
                                    end: 210,
                                },
                            },
                        ),
                        (
                            Name {
                                name: "_id",
                                span: Span {
                                    start: 212,
                                    end: 215,
                                },
                            },
                            Literal {
                                value: Int(
                                    "1",
                                ),
                                span: Span {
                                    start: 217,
                                    end: 218,
                                },
                            },
                        ),
                        (
                            Name {
                                name: "active",
                                span: Span {
                                    start: 220,
                                    end: 226,
                                },
                            },
                            Literal {
                                value: Bool(
                                    true,
                                ),
                                span: Span {
                                    start: 228,
                                    end: 232,
                                },
                            },
                        ),
                    ],
                    span: Span {
                        start: 193,
                        end: 234,
                    },
                },
                span: Span {
                    start: 162,
                    end: 234,
                },
            },
        ),
        LetDecl(
            Fn {
                name: Name {
                    name: "read_id",
                    span: Span {
                        start: 240,
                        end: 247,
                    },
                },
                args: [
                    Record {
                        name: Name {
                            name: "User",
                            span: Span {
                                start: 249,
                                end: 253,
                            },
                        },
                        fields: [
                            (
                                Name {
                                    name: "_id",
                                    span: Span {
                                        start: 256,
                                        end: 259,
                                    },
                                },
                                Var {
                                    name: Name {
                                        name: "_id",
                                        span: Span {
                                            start: 256,
                                            end: 259,
                                        },
                                    },
                                    span: Span {
                                        start: 256,
                                        end: 259,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 249,
                            end: 261,
                        },
                    },
                ],
                body: Var {
                    name: Name {
                        name: "_id",
                        span: Span {
                            start: 265,
                            end: 268,
                        },
                    },
                    span: Span {
                        start: 265,
                        end: 268,
                    },
                },
                span: Span {
                    start: 236,
                    end: 268,
                },
            },
        ),
    ],
}
